--- a/package.json
+++ b/package.json
@@ -2,5 +2,24 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1"
-  }
+  },
+  "name": "back-end-1",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wilkigab001/back-end-1.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/wilkigab001/back-end-1/issues"
+  },
+  "homepage": "https://github.com/wilkigab001/back-end-1#readme",
+  "description": ""
 }
